--- a/docs/faqs.mdx
+++ b/docs/faqs.mdx
@@ -7,6 +7,25 @@ tags: [faqs, support]
 import DocCardList from "@theme/DocCardList";
 import Link from "@docusaurus/Link";
 
+## Details!
+
+<details>
+  <summary>Toggle me!</summary>
+
+  This is the detailed content
+
+  ```js
+  console.log("Markdown features including the code block are available");
+  ```
+
+  You can use Markdown here including **bold** and _italic_ text, and [inline link](https://docusaurus.io)
+  <details>
+    <summary>Nested toggle! Some surprise inside...</summary>
+
+    😲😲😲😲😲
+  </details>
+</details>
+
 ## General
 
 ### What does mXrap stand for?
